Added div table instead of drop-down list
Change-Id: Id5cedaac2eba9326ab4984b9057b816e88f38f4f

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -10,3 +10,21 @@ body
 input {
     width: 100%;
 }
+
+/* Result Table */
+.divTable{
+	display: table;
+	width: 100%;
+}
+.divTableRow {
+	display: table-row;
+}
+.divTableCell {
+	background-color: #EEE;
+	border: 1px solid #999999;
+	display: table-cell;
+	padding: 3px 10px;
+}
+.divTableBody {
+	display: table-row-group;
+}
