Added tray icon
Change-Id: I418a5a3a6d85546d1f181a7f497f3a288addb3bd

--- a/src/skimages.qrc
+++ b/src/skimages.qrc
@@ -4,5 +4,6 @@
         <file>images/if_cog_35873_pressed.png</file>
         <file>images/if_edit_add_7710.png</file>
         <file>images/if_edit_add_7710_pressed.png</file>
+        <file>images/if_tray_active.png</file>
     </qresource>
 </RCC>
