--- a/src/skimages.qrc
+++ b/src/skimages.qrc
@@ -1,9 +1,9 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/if_cog_35873.png</file>
-        <file>images/if_cog_35873_pressed.png</file>
-        <file>images/if_edit_add_7710.png</file>
-        <file>images/if_edit_add_7710_pressed.png</file>
-        <file>images/if_tray_active.png</file>
+        <file>images/gear.png</file>
+        <file>images/gear-pressed.png</file>
+        <file>images/add.png</file>
+        <file>images/add-pressed.png</file>
+        <file>images/tray.png</file>
     </qresource>
 </RCC>
