--- a/src/sksettings.ui
+++ b/src/sksettings.ui
@@ -73,7 +73,7 @@
     <item row="2" column="1">
      <widget class="QLineEdit" name="skServer">
       <property name="text">
-       <string>hw2</string>
+       <string>localhost</string>
       </property>
      </widget>
     </item>
